<resources>
    <string name="app_name">R24App</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Salir</string>
    <string name="action_search_user">Buscar Usuarios</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_register_report">Reportar incidente</string>
    <string name="reportDetailLabel">Detalle del reporte</string>
    <string name="reportDetailHint">Escriba aquí el detalle</string>
    <string name="affectedPeopleLabel">Cantidad personas afectadas</string>
    <string name="affectedAnimalsLabel">Cantidad animales afectados</string>
    <string name="pathDisabledLabel">Camino bloqueado</string>
    <string name="addImagesLabel">Añadir imágenes</string>
    <string name="noImagesSelected">No hay imágenes seleccionadas</string>
    <string name="disasterTypeLabel">Seleccione el tipo de desastre</string>
    <string name="enableMapLocation">Mostrar ubicación en el mapa</string>
    <string name="disasterLocation">Lugar del desastre</string>
    <string name="saveReportButton">REPORTAR</string>
    <string name="incidentPlace">Lugar del accidente…</string>
    <string name="requiredField">Espacio requerido *</string>
    <string name="duplicatedPhoneNumber">El número de teléfono ya existe</string>
    <string name="duplicatedUsername">El nombre de usuario ya existe</string>
    <string name="alphanumericPassword">Letras, números y símbolos son requeridos</string>
    <string name="invalidEmailFormat">Dirección de correo con formato inválido</string>
    <string name="imageSelected">Imagen Seleccionada</string>
    <string name="loadImages">Cargar Images</string>
    <string name="fieldName">Ingrese su nombre</string>
    <string name="fieldNameHint">Nombre</string>
    <string name="fieldLastName">Ingrese sus apellidos</string>
    <string name="fieldLastNameHint">Apellidos</string>
    <string name="fieldUsername">Ingrese su nombre de usuario</string>
    <string name="fieldUsernameHint">Nombre de usuario</string>
    <string name="fieldPhoneNumber">Ingrese su número de teléfono</string>
    <string name="fieldPhoneNumberHint">Número de teléfono</string>
    <string name="fieldAddress">Ingrese su dirección</string>
    <string name="fieldAddressHint">Dirección</string>
    <string name="fieldEmailAddressHint">Correo electrónico</string>
    <string name="emailAddressHelperText">Ingrese su correo electrónico</string>
    <string name="passwordHelperText">Ingrese su contraseña</string>
    <string name="changePasswordHelperText">Cambiar Contraseña</string>
    <string name="fieldPasswordHint">Contraseña</string>
    <string name="loginButtonText">Ingresar</string>
    <string name="recoverPasswordButtonText">Recuperar Contraseña</string>
    <string name="registerButtonText">Registrar</string>
    <string name="nextButtonText">SIGUIENTE</string>
    <string name="recoverPasswordText">Recuperar contraseña</string>
    <string name="loginPageHeaderText">Bienvenido(a) a la página de inicio de sesión</string>
    <string name="reportsScreenHeader">Registre aquí su reporte</string>
    <string name="myReportsScreenHeader">Mis reportes</string>
    <string name="title_user_profile">Mi perfil</string>
    <string name="title_activity_searchUser">Buscar usuario</string>
    <string name="editButtonText">EDITAR</string>
    <string name="saveButtonText">GUARDAR</string>
    <string name="needHelpAction">Señal de auxilio</string>
    <string name="amOkAction">Estoy bien</string>
    <string name="userManualButton">Manual del usuario</string>
    <string name="editAction">Editar</string>
    <string name="viewAction">Ver</string>
    <string name="deleteAction">Eliminar</string>
    <string name="changeViewSwitch">Vista</string>
    <string name="autoLocalizationSwitch">Autolocalización</string>
    <string name="noReportsRegistered">No tienes reportes registrados</string>
    <string name="reportIncidentNotification">Nuevo reporte de incidente</string>

    <string-array name="disasterTypes_array">
        <item>Seleccione el tipo de desastre</item>
        <item>Erupción Volcánica</item>
        <item>Terremoto</item>
        <item>Inundación</item>
    </string-array>

    <string name="title_activity_map">Mapa de incidentes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detalle_dialogDelete_message">¿Está seguro de querer eliminar esta imágen?</string>
    <string name="label_dialog_delete">Eliminar</string>
    <string name="label_dialog_cancel">Cancelar</string>
    <string name="title_activity_alerts">Alertas</string>
    <string name="title_activity_myReports"> Mis Reportes</string>
    <string name="exitAlertTittle">¡Salir!</string>
    <string name="exitAlert">¿Está seguro que desea salir de la aplicación?</string>
    <string name="secondary_effects_label">Efectos Secundarios:</string>
</resources>


