<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.r24app.MainActivity">
    <group android:id="@+id/settings1">
        <item
            android:id="@+id/report"
            android:orderInCategory="100"
            android:title="@string/title_register_report"
            app:showAsAction="never"
            android:icon="@drawable/ic_report_black_24dp"/>
    </group>

    <group android:id="@+id/settings2">
        <item
            android:id="@+id/map2"
            android:orderInCategory="100"
            android:title="@string/title_activity_map"
            app:showAsAction="never"
            android:icon="@drawable/ic_map_black_24dp"/>
    </group>

    <group android:id="@+id/settings5">
        <item
            android:id="@+id/alerts"
            android:orderInCategory="100"
            android:title="@string/title_activity_alerts"
            app:showAsAction="never"
            android:icon="@drawable/ic_announcement_black_24dp"/>
    </group>


    <group android:id="@+id/settings6">
        <item
            android:id="@+id/searchUser"
            android:orderInCategory="100"
            android:title="@string/title_activity_searchUser"
            app:showAsAction="never"
            android:icon="@drawable/ic_search_black_24dp"/>
    </group>

    <group android:id="@+id/settings3">
        <item
            android:id="@+id/userSettings"
            android:orderInCategory="100"
            android:title="@string/title_user_profile"
            app:showAsAction="never"
            android:icon="@drawable/ic_person_black_24dp"/>
    </group>


    <group android:id="@+id/settings4">
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_signout"
            app:showAsAction="never"
            android:icon="@drawable/ic_power_settings_new_black_24dp"/>
    </group >
    <group android:id="@+id/settings7">
        <item
            android:id="@+id/action_search_user"
            android:orderInCategory="100"
            android:title="@string/action_search_user"
            app:showAsAction="never"
            android:icon="@drawable/ic_search_black_24dp"/>
    </group >


</menu>
