<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/viewReportItem">
        <item
            android:id="@+id/viewReportOption"
            android:icon="@drawable/ic_report_black_24dp"
            android:orderInCategory="100"
            android:title="@string/viewAction" />
    </group>

    <group android:id="@+id/editReportItem">
        <item
            android:id="@+id/editReportOption"
            android:icon="@drawable/ic_report_black_24dp"
            android:orderInCategory="100"
            android:title="@string/editAction" />
    </group>

    <group android:id="@+id/deleteReportItem">
        <item
            android:id="@+id/deleteReportOption"
            android:icon="@drawable/ic_report_black_24dp"
            android:orderInCategory="100"
            android:title="@string/deleteAction" />
    </group>
</menu>
