<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="Activities.ReportIncidentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="92dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/newReportReturnButton"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:background="#00000000"
                app:srcCompat="@drawable/back" />

            <TextView
                android:id="@+id/newReportScreenHeader"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_register_report"
                android:textAlignment="center"
                android:textColor="@color/brownColor"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/affectedAnimalsLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/affectedAnimalsLabel"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/affectedPeopleLayout"
            app:startIconDrawable="@drawable/dog"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/affectedAnimalsInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="6" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/affectedPeopleLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/affectedPeopleLabel"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:startIconDrawable="@drawable/people"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/affectedPeopleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="6" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/disasterTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:spinnerMode="dialog"
            android:theme="@style/SpinnerTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/affectedAnimalsLayout"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:text="@string/pathDisabledLabel"
            android:textColor="@color/blackColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disasterTypeSpinner" />

        <Switch
            android:id="@+id/isPathDisabled"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="12dp"
            android:theme="@style/AppTheme.SwitchTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disasterTypeSpinner" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:text="@string/enableMapLocation"
            android:textColor="@color/blackColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/mapActivated"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Switch
            android:id="@+id/mapActivated"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:theme="@style/AppTheme.SwitchTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mapLocationLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/disasterLocation"
            app:boxBackgroundMode="outline"
            app:endIconMode="none"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:startIconDrawable="@drawable/location"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mapLocationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:enabled="false"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addImagesButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:text="@string/addImagesLabel"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textAppearance="@style/Widget.AppCompat.Button"
            android:textColor="@color/blackColor"
            android:textSize="16sp"
            app:icon="@drawable/add"
            app:iconGravity="end"
            app:iconTint="@color/blackColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapLocationLayout" />

        <Button
            android:id="@+id/btnSubmitReport"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/saveReportButton"
            app:iconGravity="textEnd"
            app:iconPadding="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reportDetailLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reportDetailLayout"
            style="@style/MyTheme.DayNight.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagesSelectedText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reportDetailInput"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:hint="@string/reportDetailHint"
                android:inputType="textMultiLine"
                android:maxLength="1000" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/imagesSelectedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addImagesButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
